fix: fix article gap

--- a/styles/layout/_article.scss
+++ b/styles/layout/_article.scss
@@ -24,7 +24,7 @@
       grid-column: 3 / 6;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      gap: 4px;
     }
   }
   &__title {
